--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,29 @@
 @import 'tailwindcss';
+
+:root {
+  --border-color: var(--color-stone-400);
+  --focus-color: var(--color-sky-600);
+  @apply text-stone-800;
+}
+
+body {
+  font-family: 'Segoe UI', 'Inter', system-ui, sans-serif;
+}
+
+textarea {
+  border-color: var(--border-color);
+  @apply mt-1 rounded border-1 p-1;
+}
+
+textarea:focus {
+  border-color: var(--focus-color);
+  @apply ring-2 ring-sky-600 outline-none;
+}
+
+button {
+  @apply cursor-pointer rounded border-stone-400 px-2 py-1;
+}
+
+button:hover {
+  @apply bg-stone-100;
+}
