Get meta data from last generated image
- consistent style for button and select
- Select component for select element
- remove ssr = false from layout.svelte
- add more image parameter for the same image in SwamUI
- layout for image on right side

--- a/src/app.css
+++ b/src/app.css
@@ -15,15 +15,19 @@ textarea {
   @apply mt-1 rounded border-1 p-1;
 }
 
+button:focus,
+select:focus,
 textarea:focus {
   border-color: var(--focus-color);
   @apply ring-2 ring-sky-600 outline-none;
 }
 
-button {
-  @apply cursor-pointer rounded border-stone-400 px-2 py-1;
+button,
+select {
+  @apply cursor-pointer rounded border-1 border-stone-400 px-2 py-1;
 }
 
-button:hover {
+button:hover,
+select:hover {
   @apply bg-stone-100;
 }
