--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 
 :root {
-  --border-color: var(--color-stone-400);
+  --border-color: var(--color-stone-300);
   --focus-color: var(--color-sky-600);
   @apply text-stone-800;
 }
@@ -24,11 +24,12 @@ textarea:focus {
 
 button,
 select {
-  @apply cursor-pointer rounded border-1 border-stone-400 px-2 py-1;
+  border-color: var(--border-color);
+  @apply cursor-pointer rounded border-1 px-2 py-1;
 }
 
 select.xs {
-  @apply px-1 py-[2px];
+  @apply px-1 py-[1px];
 }
 
 button:hover,
