--- a/src/app.css
+++ b/src/app.css
@@ -57,6 +57,32 @@ body {
   input[type='checkbox'] {
     @apply mr-1 ring-0;
   }
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .scrollbar-none::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .scrollbar-none {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  /* .scrollbar-1 {
+    scrollbar-width: thin;
+  } */
+  .scrollbar-1::-webkit-scrollbar {
+    width: 2px;
+    height: 2px;
+  }
+  .scrollbar-1::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  .scrollbar-1::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 1px;
+  }
 }
 
 @theme {
