--- a/src/app.css
+++ b/src/app.css
@@ -69,9 +69,10 @@ body {
     scrollbar-width: none; /* Firefox */
   }
 
-  /* .scrollbar-1 {
+  .scrollbar-1 {
     scrollbar-width: thin;
-  } */
+    -ms-overflow-style: scrollbar;
+  }
   .scrollbar-1::-webkit-scrollbar {
     width: 2px;
     height: 2px;
